[package]
name = "twocb"
version = "0.1.0"
authors = ["coral <jonas@jonasbengtson.se>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aubio-rs = "0.1.3"
cpal = "0.13.1"
crossbeam-channel = "0.5.0"
log = "0.4.11"
notify = "4.0.15"
pickledb = "0.4.1"
pretty_env_logger = "0.4.0"
ringbuf = "0.2.2"
rustchord = "0.2.1"
rusty_v8 = "0.15.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
tokio = { version = "1.0.1", features = ["full"] }
vecmath = "1.0.0"
