[package]
name = "twocb"
version = "0.1.0"
authors = ["coral <jonas@jonasbengtson.se>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.6"
anyhow = "1.0.40"
atomic-counter = "1.0.1"
aubio = "0.2.1"
bincode = "1.3.3"
clap = "3.0.0-beta.2"
cpal = "0.13.3"
crossbeam = "0.8.0"
crossbeam-channel = "0.5.1"
futures = "0.3.15"
glob = "0.3.0"
lazy_static = "1.4.0"
log = "0.4.11"
notify = "4.0.17"
pretty_env_logger = "0.4.0"
ringbuf = "0.2.3"
rustchord = "0.3.1"
rusty_v8 = "0.22.2"
serde = { version = "1.0.126", features = ["derive", "rc"] }
serde_cbor = "0.11.1"
serde_derive = "1.0.126"
serde_json = "1.0.64"
sled = "0.34.6"
tokio = { version = "1.6.1", features = ["full"] }
vecmath = "1.0.0"
zeroconf = "0.7.1"
strum = { version = "0.21", features = ["derive"] }
strum_macros = "0.21"